# IBus-Speech-To-Text

./: AUTHORS  Changelog  README.md  ibus-stt.spec  meson.build
build-aux/: meson_post_install.py
data/: ibus-engine-stt.in  ibus-setup-stt.desktop.in.in  ibus-setup-stt.in  meson.build  org.freedesktop.ibus.engine.stt.gschema.xml.in  stt.appdata.xml.in.in
data/formatting/: en_US.json  fr_FR.json  meson.build
data/numbers/: config_de.properties  config_en.properties  config_es.properties  config_fr.properties  config_hi.properties  config_pt.properties  config_ru.properties  config_sk.properties  meson.build
engine/: main.py  mainconfig.py  meson.build  pylintrc  sttconfig.gresource.xml  sttconfigdialog.py  sttconfigdialog.ui  sttcurrentlocale.py  sttengine.py  sttenginefactory.py  sttgstbase.py  sttgstfactory.py  sttgsthandler.py  sttgstvosk.py  sttlocalerow.py  sttlocalerow.ui  sttmodelchooserdialog.py  sttmodelchooserdialog.ui  sttmodelrow.py  sttmodelrow.ui  sttsegmentprocess.py  sttshortcutdialog.py  sttshortcutdialog.ui  sttshortcutrow.py  sttshortcutrow.ui  sttutils.py.in  sttutterancerow.py  sttutterancerow.ui  sttutterancetree.py  sttvoskmodel.py  sttvoskmodelmanagers.py  sttwordstodigits.py
po/: POTFILES.in  fr.po  ibus-stt.pot  meson.build
