installdir=datadir / meson.project_name() / 'numbers'
install_data(['config_de.properties',
              'config_en.properties',
              'config_es.properties',
              'config_fr.properties',
              'config_hi.properties',
              'config_pt.properties',
              'config_ru.properties',
              'config_sk.properties'],
             install_dir: installdir)